@@ -35,9 +35,15 @@ Display program arguments.
 .\"
 .TP
 \fB\-b\fR, \fB\-\-libs\fR
-Display library details.
+Display details of linked libraries.
 See
 .BR dl_iterate_phdr (3) "" .
+.\"
+.TP
+\fB\-B\fR, \fB\-\-libc\fR
+Display standard library details.
+See
+.BR feature_test_macros (7) "" " (Linux)."
 .\"
 .TP
 \fB\-c\fR, \fB\-\-cgroups\fR
